--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -27,8 +27,9 @@ top_builddir = @top_builddir@
 top_srcdir:= @top_srcdir@
 
 # files and flags
-SOURCES:= dtls-server.c ccm-test.c prf-test.c \
-  dtls-client.c
+SOURCES:= ccm-test.c prf-test.c \
+  dtls-rlwe-server.c dtls-rlwe-client.c 
+  #dtls-server.c dtls-client.c 
   #cbc_aes128-test.c #dsrv-test.c
 OBJECTS:= $(patsubst %.c, %.o, $(SOURCES))
 PROGRAMS:= $(patsubst %.c, %, $(SOURCES))
